k8s/d3/notes/endopints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kplabs-service
subsets:
  - addresses:
      - ip: 10.244.0.252
      - ip: 10.244.0.133
    ports:
      - port: 80
