k8s/d3/notes/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kplabs-nodeport
spec:
  selector:
    run: nginx
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
